Work in progress

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -652,6 +652,7 @@ context=default
 auth=md5
 permit=0.0.0.0/0.0.0.0
 encryption=no
+requirecalltoken=no
 disallow=all
 allow=slin
 
@@ -665,5 +666,6 @@ context=default
 auth=md5
 permit=0.0.0.0/0.0.0.0
 encryption=no
+requirecalltoken=no
 disallow=all
 allow=slin
