Work in progress

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -281,8 +281,8 @@ encryption=no
 
 ; Minimum and maximum amounts of time that IAX2 peers can request as a
 ; registration expiration interval (in seconds).
-; minregexpire = 60
-; maxregexpire = 60
+minregexpire = 30
+maxregexpire = 3600
 
 ; IAX2 helper threads
 
