Add SIP leg and sound files for asterisk testEnv

--- a/testEnv/astcfg/pjsip.conf
+++ b/testEnv/astcfg/pjsip.conf
@@ -1614,3 +1614,34 @@
 ; TEL URIs are allowed in the request, From, and To headers.
 ;
 ; You can match a TEL URI From header by IP, header, or auth_username.
+
+
+
+[transport-udp]
+type=transport
+protocol=udp    ;udp,tcp,tls,ws,wss,flow
+bind=0.0.0.0
+
+[pepe]
+type=endpoint
+context=default
+transport=transport-udp
+disallow=all
+allow=ulaw
+auth=pepe
+aors=pepe
+
+[pepe]
+type=auth
+auth_type=userpass
+username=pepe
+password=pepe123
+
+[pepe]
+type=aor
+max_contacts=1
+
+
+
+
+
