Add extensions to dialplan for testing

--- a/testEnv/astcfg/extensions.conf
+++ b/testEnv/astcfg/extensions.conf
@@ -556,6 +556,7 @@ exten => s,1,ChanIsAvail(${ARG1},s)			; s is for ANY call
 
 [demo]
 include => stdexten
+
 ;
 ; We start with what to do when a call first comes in.
 ;
@@ -673,6 +674,9 @@ include => demo
 ; probably don't want to have the demo there.
 ;
 include => demo
+
+exten => 200,1,Dial(IAX2/line0)
+exten => 201,1,Dial(IAX2/line1)
 
 ;
 ; An extension like the one below can be used for FWD, Nikotel, sipgate etc.
