Improve codecs support

--- a/testEnv/astcfg/codecs.conf
+++ b/testEnv/astcfg/codecs.conf
@@ -202,10 +202,11 @@ packetloss_percentage=10;
 
 ;=============================== OPUS Examples ================================
 ;
-;[opus]
-;type=opus
-;max_playback_rate=8000 ; Limit the maximum playback rate on the encoder
-;fec=no ; No inband fec
+[opus]
+type=opus
+max_playback_rate=8000 ; Limit the maximum playback rate on the encoder
+fec=no ; No inband fec
+cbr=yes ; Negotiate a constant bit rate
 
 ;[myopus]
 ;type=opus
