--- a/testEnv/astcfg/pjsip.conf
+++ b/testEnv/astcfg/pjsip.conf
@@ -1626,8 +1626,7 @@ bind=0.0.0.0
 type=endpoint
 context=default
 transport=transport-udp
-disallow=all
-allow=ulaw
+allow=all
 auth=pepe
 aors=pepe
 
