Made improvements in audio manageement

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -142,7 +142,7 @@
 ; Specify bandwidth of low, medium, or high to control which codecs are used
 ; in general.
 ;
-bandwidth=low
+bandwidth=high
 ;
 
 ;
@@ -195,7 +195,7 @@ disallow=lpc10
 ; but occasionally has spikes.
 ;
 
-jitterbuffer=no
+;jitterbuffer=yes
 ;maxjitterbuffer=1000
 ;maxjitterinterps=10
 ;resyncthreshold=1000
@@ -654,7 +654,9 @@ permit=0.0.0.0/0.0.0.0
 encryption=no
 requirecalltoken=no
 disallow=all
-allow=slin
+allow=ulaw
+trunk=no
+jitterbuffer=no
 
 [line1]
 type=friend
@@ -668,4 +670,6 @@ permit=0.0.0.0/0.0.0.0
 encryption=no
 requirecalltoken=no
 disallow=all
-allow=slin
+allow=ulaw
+trunk=no
+jitterbuffer=no
