--- a/testEnv/astcfg/modules.conf
+++ b/testEnv/astcfg/modules.conf
@@ -54,4 +54,7 @@ noload = chan_sip.so
 noload = app_voicemail_imap.so
 noload = app_voicemail_odbc.so
 
-load = iax_chan.so
+require = chan_iax2.so
+require = res_timing_timerfd.so
+noload = res_timing_pthread.so
+noload = res_timing_dahdi.so
