--- a/testEnv/astcfg/pjsip.conf
+++ b/testEnv/astcfg/pjsip.conf
@@ -1626,7 +1626,8 @@ bind=0.0.0.0
 type=endpoint
 context=default
 transport=transport-udp
-allow=all
+disallow=all
+allow=ulaw
 dtmf_mode=auto
 auth=pepe
 aors=pepe
@@ -1639,7 +1640,7 @@ password=pepe123
 
 [pepe]
 type=aor
-max_contacts=1
+max_contacts=5
 
 
 
