Fix choppy audio

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -654,7 +654,7 @@ permit=0.0.0.0/0.0.0.0
 encryption=no
 requirecalltoken=no
 disallow=all
-allow=ulaw
+allow=slin
 trunk=no
 jitterbuffer=no
 
@@ -672,4 +672,5 @@ requirecalltoken=no
 disallow=all
 allow=ulaw
 trunk=no
-jitterbuffer=no
+jitterbuffer=yes
+
