--- a/testEnv/astcfg/modules.conf
+++ b/testEnv/astcfg/modules.conf
@@ -53,8 +53,5 @@ noload = chan_sip.so
 ;noload = app_voicemail.so
 noload = app_voicemail_imap.so
 noload = app_voicemail_odbc.so
-
-require = chan_iax2.so
-require = res_timing_timerfd.so
-noload = res_timing_pthread.so
-noload = res_timing_dahdi.so
+load = chan_iax2.so
+load = res_timing_timerfd.so
