--- a/testEnv/astcfg/pjsip.conf
+++ b/testEnv/astcfg/pjsip.conf
@@ -1643,6 +1643,25 @@ type=aor
 max_contacts=5
 
 
+[pepe2]
+type=endpoint
+context=default
+transport=transport-udp
+disallow=all
+allow=ulaw
+dtmf_mode=auto
+auth=pepe2
+aors=pepe2
+
+[pepe2]
+type=auth
+auth_type=userpass
+username=pepe2
+password=pepe123
+
+[pepe2]
+type=aor
+max_contacts=5
 
 
 
