--- a/testEnv/astcfg/extensions.conf
+++ b/testEnv/astcfg/extensions.conf
@@ -677,6 +677,7 @@ include => demo
 
 exten => 200,1,Dial(IAX2/line0)
 exten => 201,1,Dial(IAX2/line1)
+exten => 300,1,Dial(PJSIP/pepe)
 
 ;
 ; An extension like the one below can be used for FWD, Nikotel, sipgate etc.
