Fix accept frm and media output

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -654,7 +654,7 @@ permit=0.0.0.0/0.0.0.0
 encryption=no
 requirecalltoken=no
 disallow=all
-allow=slin
+allow=ulaw,slin
 trunk=no
 jitterbuffer=no
 
@@ -670,7 +670,7 @@ permit=0.0.0.0/0.0.0.0
 encryption=no
 requirecalltoken=no
 disallow=all
-allow=ulaw
+allow=ulaw,slin
 trunk=no
 jitterbuffer=no
 
