Add call token support

--- a/testEnv/astcfg/iax.conf
+++ b/testEnv/astcfg/iax.conf
@@ -652,7 +652,7 @@ context=default
 auth=md5
 permit=0.0.0.0/0.0.0.0
 encryption=no
-requirecalltoken=no
+requirecalltoken=yes
 disallow=all
 allow=ulaw,slin
 trunk=no
